Fix picture looking funky on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
   text-align: center;
 }
+
+.feature-image {
+  width: min(500px, 100%);
+}
